# src/modules/node-type/node-type.module.ts
@@ -1,0 +1,11 @@
+import { Module } from "@nestjs/common";
+
+import { NodeTypeController } from "./node-type.controller";
+import { NodeTypeService } from "./node-type.service";
+
+@Module({
+  controllers: [NodeTypeController],
+  providers: [NodeTypeService],
+  exports: [NodeTypeService],
+})
+export class NodeTypeModule {}
